# mpv-tauri

./: .gitignore  Cargo.toml  README.md  build.rs  eslint.config.mts  index.html  opengl.rs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
examples/libmpv-example/: README.md  package-lock.json  package.json
examples/libmpv-example/src/: App.tsx  store.ts
examples/libmpv-example/src-tauri/: Cargo.toml
examples/libmpv-example/src/hooks/: useMpv.ts
examples/libmpv-example/src/pages/: Controls.tsx  Player.tsx  VideoRect.tsx
examples/libmpv-example/src/utils/: commands.ts
examples/mpv-example/: README.md  index.html  package.json
examples/mpv-example/src/: App.tsx  snippet.ts
examples/mpv-example/src-tauri/: Cargo.toml
examples/mpv-example/src-tauri/src/: main.rs
examples/mpv-example/src/hooks/: useMpv.ts
examples/mpv-example/src/pages/: Controls.tsx  Player.tsx  VideoRect.tsx
examples/mpv-example/src/utils/: commands.ts  formatTime.ts
examples/react/: README.md  index.html  package.json  pnpm-lock.yaml
examples/react/src/: App.tsx  store.ts
examples/react/src-tauri/: Cargo.toml  tauri.conf.json
examples/react/src-tauri/capabilities/: default.json
examples/react/src-tauri/src/: lib.rs
examples/react/src/components/: Control.tsx  Player.tsx  VideoRect.tsx
examples/react/src/hooks/: useAutoHide.ts  useMpv.ts  usePlayer.ts
examples/react/src/pages/: Controls.tsx  Player.tsx
examples/react/src/utils/: commands.ts
examples/snippets/: initialize-mpv.ts  initializeMpv.ts  listen-mpv-events.ts  listenMpvEvents.ts  observe-mpv-properties.ts  quick-start.ts  quickStart.ts  sendMpvCommand.ts  set-video-margin-ratio.ts
guest-js/: index.ts  types.ts
mpv/: mpv.conf
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: destroy_mpv.toml  initialize_mpv.toml
permissions/schemas/: schema.json
plugins/libmpv-sys/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-libmpv/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-libmpv/guest-js/: index.ts  types.ts
plugins/tauri-plugin-libmpv/src/: commands.rs  desktop.rs  error.rs  lib.rs  models.rs  properties.rs  utils.rs
plugins/tauri-plugin-libmpv/src/libmpv/: builder.rs  command.rs  error.rs  event.rs  mod.rs  models.rs  property.rs  render.rs  utils.rs
plugins/tauri-plugin-mpv/: CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-mpv/guest-js/: index.ts  types.ts
plugins/tauri-plugin-mpv/permissions/: default.toml
plugins/tauri-plugin-mpv/permissions/autogenerated/commands/: send_mpv_command.toml
plugins/tauri-plugin-mpv/permissions/schemas/: schema.json
plugins/tauri-plugin-mpv/src/: commands.rs  desktop.rs  error.rs  events.rs  ipc.rs  lib.rs  models.rs  process.rs  utils.rs
src/: App.css  App.tsx  commands.rs  desktop.rs  error.rs  events.rs  ipc.rs  lib.rs  models.rs  process.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/components/: Control.css  Control.tsx  VideoRect.css  VideoRect.tsx  control.css
src/hooks/: useCli.ts  useConnection.ts  useFullscreen.ts  usePlayer.ts
src/utils/: formatTime.ts  sendCommand.ts
