[workspace]
resolver = "2"
members = [
  "plugins/tauri-plugin-mpv",
  "plugins/tauri-plugin-libmpv",
  "examples/mpv-example/src-tauri",
  "examples/libmpv-example/src-tauri",
]

[workspace.dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
raw-window-handle = "0.6"
log = "0.4"
