[package]
name = "libmpv-sys"
version = "0.1.0"
edition = "2024"

[dependencies]
# These dependencies are optional and only used by the `prebuild` binary.
bindgen = { version = "0.72", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[[bin]]
name = "prebuild"
path = "src/bin/prebuild.rs"
required-features = ["bindgen", "reqwest"]
