[package]
name = "tauri-plugin-libmpv-sys"
version = "0.1.0"
edition = "2024"
description = "Raw FFI bindings for libmpv"
license = "MPL-2.0"
repository = "https://github.com/nini22P/mpv-tauri"

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }
reqwest = { version = "0.12.23", features = ["blocking"], optional = true }

[features]
generate-bindings = ["bindgen", "reqwest"]
