[package]
name = "tauri-plugin-libmpv"
version = "0.1.0"
authors = ["22"]
description = "A Tauri plugin for embedding the mpv player in your app via libmpv."
edition = "2021"
rust-version = "1.77.2"
license = "MPL-2.0"
repository = "https://github.com/nini22P/mpv-tauri"
keywords = ["tauri", "plugin", "mpv", "media", "player"]
categories = ["multimedia", "gui", "api-bindings"]
readme = "README.md"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules", "/target"]
links = "tauri-plugin-libmpv"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
raw-window-handle = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
tauri-plugin-libmpv-sys = { version = "0.1.0", default-features = false }
glow = "0.16"
winit = "0.30"
glutin = "0.32"
base64 = "0.22"
scopeguard = "1"
indexmap = { version = "2", features = ["serde"] }

[target.'cfg(windows)'.dependencies]

[target.'cfg(unix)'.dependencies]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[features]
generate-bindings = ["tauri-plugin-libmpv-sys/generate-bindings"]
